--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
-# Database connection
+# ✅ DATABASE
 DATABASE_URL=postgres://whispers_user:whispers_pass@db:5432/whispers_db?sslmode=disable
 
+# ✅ EMAIL SMTP (gunakan Gmail atau SMTP lain yang kamu pakai)
+EMAIL_SENDER=whispers.tiket@gmail.com
+EMAIL_PASSWORD=your_app_password_here
 
-EMAIL_SENDER=your.email@gmail.com
-EMAIL_PASSWORD=your-app-password
+# ✅ APP CONFIG
+APP_PORT=8080
+
+# ✅ QR / PDF PATHS (optional - bisa juga di-hardcode di config)
+QR_DIR=qrcodes
+PDF_DIR=pdfs
