--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 DATABASE_URL=postgres://whispers_user:whispers_pass@db:5432/whispers_db?sslmode=disable
 
 # ✅ EMAIL SMTP (gunakan Gmail atau SMTP lain yang kamu pakai)
-EMAIL_SENDER=whispers.tiket@gmail.com
-EMAIL_PASSWORD=your_app_password_here
+EMAIL_SENDER=kheleyome1@gmail.com
+EMAIL_PASSWORD=ppyw fprv uzve yddi
 
 # ✅ APP CONFIG
 APP_PORT=8080
